Fix border between content and footer on small screens

--- a/styles/layout.less
+++ b/styles/layout.less
@@ -29,6 +29,7 @@ body {
 
 .pkp_structure_footer_wrapper {
 	background: @bg-light-shade;
+	border-top: @bg-border;
 	border-bottom: @double solid @bg-base;
 }
 
@@ -40,7 +41,6 @@ body {
 
 .pkp_structure_content {
 	padding-top: 0;
-	border-bottom: @bg-border;
 }
 
 .pkp_structure_sidebar {
